# validador-cpf-cnpj

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
src/: app.py  utils.py
src/templates/: base.html.j2  gerador.html.j2  index.html.j2  validador.html.j2
